<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back" />


        <include
            android:id="@+id/loader_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            layout="@layout/loader_layout">

        </include>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iconIv"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo_pdf" />


            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>


            <ImageView
                android:id="@+id/btn_addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="5dp"
                android:src="@drawable/ic_add_photo" />


            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_folder"
                android:textColor="@color/black"
                android:textSize="24sp" />


            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp"/>



            <!-- Input Title -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/folderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ed"
                    android:drawableStart="@drawable/ic_text"
                    android:drawablePadding="10dp"
                    android:hint="@string/folder_name"
                    android:inputType="textPersonName|textCapSentences"
                    android:padding="10dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_Delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:visibility="gone"
                tools:visibility="visible"
                android:backgroundTint="@color/design_default_color_error"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>



    </FrameLayout>



</layout>