<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".screens.add_pdf.AddPdf">


        <include
            android:id="@+id/loader_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible"
            layout="@layout/loader_layout">

        </include>


        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/iconIv"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/ic_logo_pdf" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/add_pdf"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pdfName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_ed"
                    android:drawableStart="@drawable/ic_text"
                    android:drawablePadding="10dp"
                    android:hint="@string/pdf_name"
                    android:inputType="textPersonName|textCapSentences"
                    android:padding="10dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>




            <TextView
                android:id="@+id/btn_Category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/bg_ed"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/select_category"
                android:padding="10dp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_add"
                app:drawableTint="#CCCCCC" />


            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

            <TextView
                android:id="@+id/btn_addPdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_ed"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/add_pdf"
                android:padding="10dp"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_add"
                app:drawableTint="#CCCCCC" />




            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

            <LinearLayout
                android:id="@+id/pdf_Uploaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_pdf"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pdf_is_ready"/>


                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"/>


                <ImageView
                    android:id="@+id/btn_removePdf"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_remove"
                    app:tint="@color/design_default_color_error" />


            </LinearLayout>



        </LinearLayout>







        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </FrameLayout>

</layout>